# affiliate-automation

./: .ediatorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
config/: settings.py
src/affiliate_automation/: main.py
src/automation/: content_generator.py  social_media_poster.py
src/core/: base_affiliate.py  product_manager.py
src/utils/: database.py  logger.py  retry.py
tests/: test_amazon.py  test_content_generator.py  test_database.py  test_flipkart.py  test_product_manager.py  test_retry.py
